infra/k8s/articles-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: articles-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: articles
  template:
    metadata:
      labels:
        app: articles
    spec:
      containers:
        - name: articles
          image: sitechtimes/articles
---
apiVersion: v1
kind: Service
metadata:
  name: articles-srv
spec:
  selector:
    app: articles
  ports:
    - name: articles
      protocol: TCP
      port: 3000
      targetPort: 3000
