infra/k8s/cms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      containers:
        - name: cms
          image: sitechtimes/cms
---
apiVersion: v1
kind: Service
metadata:
  name: cms-srv
spec:
  selector:
    app: cms
  ports:
    - name: cms
      protocol: TCP
      port: 3000
      targetPort: 3000
