infra/k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:users
  template:
    metadata:
      labels:
        app:users
    spec:
      containers:
        - name:users
          image: sitechtimes/users
---
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    app:users
  ports:
    - name:users
      protocol: TCP
      port: 3000
      targetPort: 3000
